turtleart.lessons.turtleart.Main.Square.scala.error
Source:3: error: value avance is not a member of Unit
	droite(90)avance(200)
                  ^Source:6: error: value avance is not a member of Unit
	droite(90)avance(200)
                  ^